--- a/frontend/src/components/common.css
+++ b/frontend/src/components/common.css
@@ -3,3 +3,25 @@
     color :white !important   
 }
 
+.table{
+    width: 90% !important;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    border: 2px solid black;
+    margin-top: 2rem;
+}
+
+.tableHead{
+    background: rgb(27, 161, 194) !important;
+}
+
+.home{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 3rem auto;
+    color: rgb(36, 10, 151);
+    font-size: 3rem;
+}
